--- a/ML/figure5.Rmd
+++ b/ML/figure5.Rmd
@@ -1,5 +1,5 @@
 ---
-  title: "Create figure for clinical variables. (figure 1 and supp figure 1)"
+  title: "Create figure 5"
 output: html_document
 ---
 
